...
    <string name="copied_info">%s copied!</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="default_home_search_hint">Search name, user or url</string>
...
    <string name="user_search_hint">Search for users…</string>
    <string name="search_in_progress">Searching…</string>
    <string name="no_passwords">There are no passwords</string>
    <string name="no_otps">There are no TOTPs</string>
    <string name="authentication_required">Authentication required</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
...
    <string name="favourites_failure">Could not modify favourite</string>
    <string name="delete_failure">Could not delete resource</string>
    <string name="shared_with">Shared with</string>
    <string name="location">Location</string>
    <string name="content_not_available">The content is not available anymore</string>
    <string name="consent">I have read and consent</string>
...
        translatable="false">• </string>
    <string name="common_message_resource_edited">%s resource was successfully edited.</string>
    <string name="common_message_resource_deleted">%s resource was deleted.</string>
    <string name="common_message_resource_shared">The resource permissions were updated.</string>
    <string name="common_message_folder_created">New folder %s has been created!</string>
    <string name="common_lack_shared_key_access">You cannot perform this action because you lack access to the shared metadata key.</string>

    <string name="validation_required_with_max_length">Length should be between 1 and %d</string>
    <string name="validation_max_length">Maximum length is %d</string>
    <string name="validation_is_required">This input is required</string>
...
    <string name="more_copy_note">Copy note</string>
    <string name="more_edit">Edit</string>
    <string name="more_delete">Delete</string>
    <string name="more_share">Share</string>
    <string name="more_add_to_favourite">Add to favourite</string>
...
    <string name="switch_account_title">Switch account</string>
    <string name="filters_menu_title">Filter view by</string>
    <string name="filters_menu_all_items">All items</string>
    <string name="filters_menu_last_used">Last used (default)</string>
    <string name="filters_menu_favourites">Favourites</string>
...
    <string name="filters_menu_expiry">Expiry</string>
    <string name="filters_menu_loading">Loading</string>
    <string name="filters_menu_folders">Folders</string>
    <string name="filters_menu_tags">Tags</string>
    <string name="filters_menu_groups">Groups</string>
...
    <string name="biometric_setup_biometric_title">Confirm using biometric</string>
    <string name="biometric_setup_biometric_subtitle">Confirm using your biometric</string>
    <string name="folder_root">Root</string>

    <string name="resource_permissions_can_read">Can read</string>
...
    <string name="help_button_description">Help</string>

    <string name="create_folder_title">Create folder</string>
    <string name="create_folder_name">Name</string>
    <string name="create_folder_name_validation">Folder name cannot be empty</string>
    <string name="create_folder_error_format">Could not create folder. %s</string>
    <string name="enter_folder_name">Enter folder name</string>

    <string name="share_folder_error_format">Could not share folder. %s</string>
...
    <string name="password_generator_unknown_strength_format">Strength (entropy: n/a bits)</string>

    <string name="create_resource_menu_create_a_resource">Create a resource</string>
    <string name="create_resource_menu_create_totp">TOTP</string>
    <string name="create_resource_menu_create_password">Password</string>
    <string name="create_resource_menu_create_note">Note</string>
    <string name="create_resource_menu_create_folder">Folder</string>
    <string name="create_resource_menu_other">Other</string>
    <string name="create_resource_menu_other_title">Other resource types</string>
...
