package net.svaroh.passly.testtags.composetags

object BottomSheet {
    const val CLOSE_ICON = "BottomSheetCloseIcon"
}
