package net.svaroh.passly.testtags.composetags

object CreateFolder {
    const val NAME_INPUT = "CreateFolderNameInput"
}
